# sysman

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-27-mocked-testing-framework.md
docs/superpowers/specs/: 2026-04-27-mocked-testing-framework-design.md
src/: animation.rs  app.rs  cli.rs  commands.rs  config.rs  event.rs  lib.rs  main.rs  theme.rs
src/collectors/: containers.rs  host.rs  logs.rs  mod.rs  netstat.rs  plugin.rs  procs.rs  provider.rs  scheduler.rs  storage.rs  systemd.rs
src/ui/: containers.rs  cpu.rs  dashboard.rs  disks.rs  footer.rs  gpu.rs  hardware.rs  help.rs  logs.rs  memory.rs  mod.rs  network.rs  processes.rs  services.rs  system.rs  widgets.rs
tests/: cli_integration.rs
