[package]
name = "sysman"
version = "0.1.0"
edition = "2024"
description = "A powerful, Linux-first system monitoring and management TUI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeetjawale/sysman"
homepage = "https://github.com/jeetjawale/sysman"
keywords = ["tui", "monitoring", "linux", "systemd", "docker"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
regex = "1.11"
sysinfo = "0.33"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.42", features = ["full"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
